# AIBootcamp

./: .gitignore  AIBot.cpp  AIBot.h  A_star.h  A_star_to_goal.cpp  A_star_to_goal.h  BotLogicIF.h  CMakeLists.txt  CleanAll.bat  ConfigData.h  Filters.cmake  GenSubmit.bat  GenSubmit.py  Globals.h  Grid.cpp  Grid.h  HasPath.cpp  HasPath.h  InitData.h  Install.txt  Interop_API.cpp  Interop_API.h  Logger.cpp  Logger.h  Move_to_goal.cpp  Move_to_goal.h  Move_to_next.cpp  Move_to_next.h  MyBotLogic.cpp  MyBotLogic.h  NewGoalVisible.cpp  NewGoalVisible.h  PlayAllMatches.bat  PlayAllMatches.py  PlayLocalMatch.bat  PlayLocalMatch.py  README.md  RepairReplayLog.py  Selector.cpp  Selector.h  (+7 more)
BehaviorTree/: A_star_to_goal.cpp  Move_to_goal.cpp  Move_to_goal.h  Move_to_next.cpp  NewGoalVisible.cpp  Selector.h  Sequence.h  UpdateGrid.cpp
Replays/20210929_175438/: L_000_20210929_175438.replay
Replays/20210929_175442/: L_001_20210929_175442.replay
Replays/20210929_175445/: L_002_20210929_175445.replay
Replays/20210929_175448/: L_003_20210929_175448.replay
Replays/20210929_175451/: L_004_20210929_175451.replay
Replays/20210929_175454/: L_005_20210929_175454.replay
Replays/20210929_175457/: L_010_20210929_175457.replay
Replays/20210929_175500/: L_011_20210929_175500.replay
Replays/20210929_175503/: L_012_20210929_175503.replay
Replays/20210929_175506/: L_013_20210929_175506.replay
Replays/20210930_151909/: L_020_20210930_151909.replay
Replays/20210930_154040/: L_021_20210930_154040.replay
Replays/20210930_161540/: L_013_20210930_161540.replay
Replays/20210930_164713/: L_013_20210930_164713.replay
Replays/20210930_164718/: L_020_20210930_164718.replay
Replays/20210930_165336/: L_020_20210930_165336.replay
Replays/20210930_170417/: L_020_20210930_170417.replay
Replays/20210930_170513/: L_020_20210930_170513.replay
Replays/20210930_171134/: L_020_20210930_171134.replay
Replays/20210930_171159/: L_020_20210930_171159.replay
Replays/20210930_171636/: L_020_20210930_171636.replay
Replays/20210930_171840/: L_020_20210930_171840.replay
Replays/20210930_172502/: L_020_20210930_172502.replay
Replays/20210930_173405/: L_020_20210930_173405.replay
Replays/20210930_173423/: L_020_20210930_173423.replay
Replays/20210930_173611/: L_020_20210930_173611.replay
Replays/20210930_174112/: L_020_20210930_174112.replay
Replays/20210930_174415/: L_020_20210930_174415.replay
Replays/20210930_174634/: L_020_20210930_174634.replay
Replays/20210930_174804/: L_020_20210930_174804.replay
Replays/20210930_174918/: L_020_20210930_174918.replay
Replays/20210930_175112/: L_021_20210930_175112.replay
Replays/20210930_175207/: L_021_20210930_175207.replay
Replays/20210930_175226/: L_021_20210930_175226.replay
Replays/20210930_175917/: L_021_20210930_175917.replay
Replays/20210930_180011/: L_022_20210930_180011.replay
Replays/20210930_180056/: L_023_20210930_180056.replay
Replays/20210930_180241/: L_023_20210930_180241.replay
Replays/20210930_180540/: L_021_20210930_180540.replay
Replays/20210930_180633/: L_021_20210930_180633.replay
Replays/20211004_135055/: L_021_20211004_135055.replay
Replays/20211004_135109/: L_022_20211004_135109.replay
Replays/20211004_135121/: L_020_20211004_135121.replay
Replays/20211004_135227/: L_000_20211004_135227.replay
Replays/20211004_135249/: L_001_20211004_135249.replay
Replays/20211004_135253/: L_002_20211004_135253.replay
Replays/20211004_135256/: L_003_20211004_135256.replay
Replays/20211004_135300/: L_004_20211004_135300.replay
(+7 files in other folders)
